# vidscribe

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
apps/api/: package.json  pyproject.toml  requirements.txt
apps/api/src/: main.py
apps/api/src/application/ports/: __init__.py  batch_repository.py  profile_video_lister.py  transcription_repository.py  video_downloader.py  whisper_service.py
apps/api/src/application/use_cases/: __init__.py  transcribe_instagram_profile.py  transcribe_video.py  transcribe_youtube.py  transcribe_youtube_batch.py
apps/api/src/domain/entities/: __init__.py  batch_transcription.py  transcription.py  transcription_segment.py
apps/api/src/infrastructure/config/: settings.py
apps/api/src/infrastructure/instagram/: __init__.py  apify_adapter.py
apps/api/src/infrastructure/persistence/: __init__.py  memory_batch_repository.py  memory_repository.py
apps/api/src/infrastructure/whisper/: __init__.py  whisper_adapter.py
apps/api/src/infrastructure/youtube/: __init__.py  ytdlp_adapter.py
apps/api/src/interface_adapters/api/routes/: health_routes.py  transcription_routes.py
apps/api/src/interface_adapters/api/websocket/: progress_handler.py
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/domain/entities/: Transcription.ts
apps/web/src/infrastructure/api/: client.ts
apps/web/src/ui/components/common/: BackendStatus.tsx
apps/web/src/ui/components/layout/: Header.tsx
apps/web/src/ui/hooks/: useBatchTranscription.ts  useTranscription.ts
(+7 files in other folders)
